# nadir

./: .gitignore  Cargo.toml  EGM96_C.mat  README.md  build.rs  egm96.mat  gpt.txt  gpt2.txt  gpt3.txt  notes.txt  rustfmt.toml
aerospace/: Cargo.toml
aerospace/src/: air_drag_trq.rs  celestial_system.rs  earth.rs  geomag.rs  gravity.rs  gravity_gradient_trq.rs  lib.rs  orbit.rs  srp_trq.rs  transformations.rs
animation/: Cargo.toml
animation/src/: animation.rs  celestial.rs  celestial_animation.rs  lib.rs  main.rs  mouse.rs
animation/src/animation/: animator.rs  mod.rs  scene.rs
animation/src/animation/scene/: earth_pipeline.rs  fxaa_pipeline.rs  mod.rs  pipeline.rs  sun_pipeline.rs
animation/src/animation/scene/shaders/: atmosphere.wgsl  earth.wgsl  fxaa.wgsl  (+3 more)
celestial/: Cargo.toml
celestial/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
examples/double_pendulum/: Cargo.toml
examples/double_pendulum/src/: main.rs
examples/floater/: Cargo.toml
examples/floater/src/: main.rs
examples/multiple_spacecraft/src/multi_software/: Cargo.toml
examples/spacecraft/: .gitignore  Cargo.toml  main.rs  system.ron
examples/spacecraft/src/: main.rs
examples/spacecraft/src/hardware/: mod.rs  rate_gyro.rs  star_tracker.rs
examples/spacecraft/src/software/: Cargo.toml  mod.rs
gadgt/: Cargo.toml
gadgt/src/: main.rs  prompts.rs
gadgt_animation/: Cargo.toml
gadgt_animation/resources/: PACE-SC-LIST-0003-_04-18-2024_Final.xlsx
gadgt_animation/src/: animation.rs  celestial.rs  main.rs
gadgt_animation/src/animation/: animator.rs  scene.rs
gadgt_animation/src/animation/scene/: camera.rs  earth_pipeline.rs  geometries.rs  pipeline.rs  sun_pipeline.rs
gravity/: Cargo.toml
gravity/resources/: EGM2008_50.txt  EGM96_50.txt
gravity/src/: constant.rs  egm.rs  egm96.rs  legendre.rs  lib.rs  main.rs  newtonian.rs  spherical_harmonics.rs
gui/: Cargo.toml
gui/src/: app_state.rs  main.rs  multibody_ui.rs  ui.rs
gui/src/ui/: animation_tab.rs  canvas.rs  dummies.rs  errors.rs  modals.rs  mouse.rs  plot_tab.rs  select_menu.rs  sim_tab.rs  simdiv.rs  tab_bar.rs  theme.rs
gui/src/ui/animation_tab/: animator.rs  scene.rs
gui/src/ui/canvas/: edge.rs  graph.rs  node.rs  nodebar.rs
gui/src/ui/plot_tab/: plot_canvas.rs  sim_menu.rs
gui/src/ui/sim_tab/: canvas.rs  sim_div.rs
magnetics/: Cargo.toml
magnetics/src/: dipole.rs  igrf.rs  lib.rs
multibody/: Cargo.toml  build.rs  dhat-heap.json  history.txt  systems.ron
multibody/examples/: double_pendulum.rs  floater.rs  pole_cart.rs
multibody/resources/: systems.ron
multibody/src/: actuator.rs  aerospace.rs  algorithms.rs  articulated_body_algorithm.rs  base.rs  body.rs  component.rs  connection.rs  delay.rs  joint.rs  joints.rs  lib.rs  main.rs  mass_properties.rs  result.rs  sensor.rs  sensors.rs  solver.rs  spacecraft.rs  system.rs  system_sim.rs
multibody/src/actuator/: magnetic_torquer_bar.rs  mod.rs  reaction_wheel.rs  thruster.rs
multibody/src/algorithms/: articulated_body_algorithm.rs  composite_rigid_body.rs  mod.rs  recursive_newton_euler.rs
multibody/src/base/: mod.rs
multibody/src/body/: body_enum.rs  body_ref.rs  body_state.rs  connection_joint.rs  mod.rs
multibody/src/joint/: errors.rs  floating.rs  joint_sim.rs  joint_state.rs  joint_transforms.rs  mod.rs  prismatic.rs  revolute.rs
multibody/src/joints/: revolute.rs
multibody/src/mechanism/: mod.rs
multibody/src/result/: mod.rs
multibody/src/sensor/: gps.rs  magnetometer.rs  mod.rs  noise.rs  rate_gyro.rs  simple.rs  star_tracker.rs
multibody/src/sensor/examples/: mod.rs  rate.rs  rate3.rs  star_tracker.rs
multibody/src/sensor/noise/: gaussian.rs  mod.rs  uniform.rs
multibody/src/sensor/simple/: rate.rs  rate3.rs  star_tracker.rs
multibody/src/sensors/: noise.rs  simple.rs
multibody/src/sensors/simple/: rate.rs  rate3.rs
multibody/src/software/: mod.rs
multibody/src/solver/: mod.rs  rk4.rs
multibody/src/system/: mod.rs
multibody/src/uncertainty/: mod.rs
nadir/: Cargo.toml
nadir/src/: helper.rs  main.pest  main.rs  plot_manager.rs  prompts.rs  registry.rs  storage.rs  value.rs  window_manager.rs
nadir/src/animation/: animator.rs  celestial_animation.rs  mod.rs
nadir/src/animation/scene/: camera.rs  earth_pipeline.rs  jupiter_pipeline.rs  mod.rs  moon_pipeline.rs  pipeline.rs  sun_pipeline.rs
nadir/src/plotting/: axes.rs  axis.rs  datatip.rs  figure.rs  legend.rs  line.rs  mod.rs  series.rs  theme.rs  title_bar.rs
nadir/src/repl/: errors.rs  mod.rs
nadir_animation/: Cargo.toml
nadir_animation/src/: animation.rs  lib.rs  main.rs
nadir_animation/src/animation/scene/: camera.rs
nadir_diffeq/: Cargo.toml  results.csv
nadir_diffeq/examples/: keplerian_orbit.rs  keplers_problem.rs  lorentz.rs  lorentz_array.rs  lorentz_struct.rs  lorenz_array.rs  lorenz_array_file.rs  lorenz_struct.rs  monte_carlo.rs  newtons.rs  pong.rs  pong_continuous.rs  pong_periodic.rs
nadir_diffeq/results2/: result.csv
nadir_diffeq/results3/: result.csv
nadir_diffeq/src/: events.rs  lib.rs  model.rs  monte_carlo.rs  result.rs  rk.rs  saving.rs  solvers.rs  state.rs  state_array.rs  stepping.rs  tableau.rs
nadir_diffeq/src/state/: mod.rs  state_array.rs  state_vector.rs  state_vectors.rs
nadir_old/: Cargo.toml
nadir_old/src/: prompts.rs
pest/: Cargo.toml
pest/src/: clone_any.rs  helper.rs  main.pest  main.rs  registry.rs  storage copy.rs  storage.rs  value.rs
plotting/: Cargo.toml
plotting/examples/: sine.rs
plotting/src/: app.rs  application.rs  axes.rs  axis.rs  canvas.rs  datatip.rs  figure.rs  legend.rs  lib.rs  line.rs  note_bar.rs  series.rs  theme.rs  title_bar.rs
plotting/src/canvas/: axes.rs  axis.rs  line.rs  mod.rs
plotting/src/canvas/axes/: axis.rs
plotting_iced/: Cargo.toml
plotting_iced/src/: application.rs  lib.rs
spatial_algebra/: Cargo.toml
spatial_algebra/src/: lib.rs
spice/: Cargo.toml
spice/src/: daf.rs  lib.rs  main.rs  pck.rs  spk.rs
syn/: Cargo.toml
syn/src/: helper.rs  main.rs  storage.rs  value.rs
transforms/: Cargo.toml
transforms/src/: lib.rs
(+231 files in other folders)
