[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Jonathan Davis <jonathan.p.davis.@nasa.gov>"]
rust-version = "1.82.0"

[workspace]
members = [ 
    "aerospace", 
    "animation",     
    "benchmarks", 
    "color", 
    "coordinate_systems",     
    "examples/*",
    "mass_properties",
    "multibody", 
    "nadir",    
    "nadir_3d",     
    "rotations", 
    "software",    
    "spatial_algebra",
    "spice", 
    "transforms", 
    "utilities",
    "time", 
    "plotting", 
    "plotting_egui",
    "nadir_result", "gravity", "legendre", "spherical_harmonics", "celestial", 
]
resolver = "2"

[workspace.dependencies]
aerospace = {path = "aerospace"} 
animation = {path = "animation"}   
celestial = {path = "celestial"}
color  = {path = "color"}  
coordinate_systems  = {path = "coordinate_systems"}
csv = "1.3.1"
eframe = "0.30.0"
egui_plot = "0.30.0"
gravity = {path = "gravity"}
legendre = {path = "legendre"}
mass_properties = {path = "mass_properties"} 
multibody = {path = "multibody"}  
nadir = {path = "nadir"}  
nadir_3d = {path = "nadir_3d"} 
nadir_result = {path = "nadir_result"}
plotting = {path = "plotting"}
plotting_egui = {path = "plotting_egui"}
rotations = {path = "rotations"} 
software = {path = "software"} 
spatial_algebra = {path = "spatial_algebra"} 
spherical_harmonics = {path = "spherical_harmonics"}
spice = {path = "spice"} 
transforms = {path = "transforms"} 
utilities = {path = "utilities"} 
time = {path = "time"} 
ambassador = "0.4.1"
approx = "0.5.1"
bincode = "1.3.3"
bytemuck = { version = "1.17.1", features = ["derive"] }
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
glam = { version = "0.29.2", features = ["bytemuck", "serde"] }
httpdate = "1.0.3"
iced = { version = "0.13.1", features = ["debug","advanced","canvas","image","tokio"] }
image = "0.25.5"
inquire = "0.7.5"
interp = "2.0.1"
num-traits = "*"
nalgebra = {version = "0.33.2", features = ["serde-serialize"] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
ron = "0.8.1"
rand = { version = "0.8.5", features = ["serde", "serde1", "small_rng"] }
rand_distr = { version = "0.4.3", features = ["serde", "serde1"] }
serde = {version = "1.0.215" , features = ["derive", "rc"]}
thiserror = "2.0.9"
typetag = "0.2.18"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 0

[profile.release]
debug = 0
opt-level = 2       # Optimizes for binary size. Use "3" for max performance.
lto = "off"          # Link Time Optimization. "fat" can be more aggressive but slower to compile.
panic = 'abort'       # Reduces binary size by not including unwind code.
incremental = true   # Disables incremental compilation for release builds.

