[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Jonathan Davis <jonathan.p.davis.@nasa.gov>"]
rust-version = "1.82.0"

[workspace]
members = [ 
    "aerospace", 
    "animation",         
    "celestial", 
    "color", 
    "coordinate_systems",     
    "examples/*",
    "gravity",
    "legendre", 
    "magnetics", 
    "mass_properties",
    "multibody", 
    "nadir",    
    "nadir_3d",     
    "nadir_result", "pest", 
    "plotting", 
    "plotting_egui", "plugins",
    "rotations",     
    "spatial_algebra",
    "spherical_harmonics", 
    "spice",
    "time", 
    "transforms", "uncertainty", 
    "utilities", 
]
resolver = "2"

[workspace.dependencies]
aerospace = {path = "aerospace"} 
ambassador = "0.4.1"
animation = {path = "animation"}   
ansi_term = "0.12.1"
approx = "0.5.1"
bincode = "1.3.3"
bytemuck = { version = "1.17.1", features = ["derive"] }
byteorder = "1.5.0"
celestial = {path = "celestial"}
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
color  = {path = "color"}  
colored = "3.0.0"
coordinate_systems  = {path = "coordinate_systems"}
csv = "1.3.1"
dirs = "5.0.1"
eframe = "0.30.0"
egui_plot = "0.30.0"
glam = { version = "0.29.2", features = ["bytemuck", "serde"] }
gravity = {path = "gravity"}
httpdate = "1.0.3"
iced = { version = "0.13.1", features = ["debug","advanced","canvas","image","tokio"] }
image = "0.25.5"
indicatif = "0.17.9"
inquire = "0.7.5"
interp = "2.0.1"
legendre = {path = "legendre"}
libloading = "0.8.6"
magnetics = {path = "magnetics"}
mass_properties = {path = "mass_properties"} 
multibody = {path = "multibody"}  
nadir = {path = "nadir"}  
nadir_3d = {path = "nadir_3d"} 
nadir_result = {path = "nadir_result"}
nalgebra = {version = "0.33.2", features = ["serde-serialize"] }
num-traits = "*"
quote = "1.0.38"
pest = "2.7.15"
pest_derive = "2.7.15"
phf = { version = "0.11.2", features = ["macros"] }
plotting = {path = "plotting"}
plotting_egui = {path = "plotting_egui"}
rand = { version = "0.8.5", features = ["serde", "serde1", "small_rng"] }
rand_distr = { version = "0.4.3", features = ["serde", "serde1"] }
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
ron = "0.8.1"
rotations = {path = "rotations"} 
rustyline = {version = "15.0.0", features = ["with-file-history"]}
rustyline-derive = "0.11.0"
serde = {version = "1.0.215" , features = ["derive", "rc"]}
spatial_algebra = {path = "spatial_algebra"} 
spherical_harmonics = {path = "spherical_harmonics"}
spice = {path = "spice"} 
thiserror = "2.0.9"
time = {path = "time"} 
transforms = {path = "transforms"} 
typetag = "0.2.18"
uncertainty = {path = "uncertainty"}
unicode-width = "0.2.0"
utilities = {path = "utilities"} 

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 0

[profile.release]
debug = 0
opt-level = 2       # Optimizes for binary size. Use "3" for max performance.
lto = "off"          # Link Time Optimization. "fat" can be more aggressive but slower to compile.
panic = 'abort'       # Reduces binary size by not including unwind code.
incremental = true   # Disables incremental compilation for release builds.

