[package]
name = "aerospace"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.0"
serde = "1.0.136"
serde_json = "1.0.79"
rotations = {path = "../rotations"}
spice = {path = "../spice"}
time = {path = "../time"}
ndarray = { version = "0.16.1", features = ["approx"] }
matfile = { version = "0.4.1", features = ["ndarray"] }
csv = "1.3.0"
approx = "0.5.1"
interp = "2.0.1"
polars = { version = "0.41.2", features = ["lazy"] }
thiserror = "1.0.67"
