[package]
name = "aerospace"
version.workspace = true
edition.workspace = true

[dependencies]
csv.workspace = true
nalgebra.workspace = true
nadir_result.workspace = true
serde.workspace = true
rotations.workspace = true
spice.workspace = true
time.workspace = true
approx.workspace = true
interp.workspace = true
thiserror.workspace = true
utilities.workspace = true
