[package]
name = "animation"
version.workspace = true
edition.workspace = true

[dependencies]
aerospace.workspace = true
bincode = "1.3.3"
bytemuck.workspace = true
color.workspace = true
glam.workspace = true
iced.workspace = true
image.workspace = true
nadir_3d.workspace = true
multibody.workspace = true
ron.workspace = true