[package]
name = "celestial"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
gravity.workspace = true
magnetics.workspace = true
nadir_diffeq.workspace = true
nalgebra.workspace = true
rotations.workspace = true
serde.workspace = true
spice.workspace = true
thiserror.workspace = true
time.workspace = true