[package]
name = "gadgt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gadgt"
path = "src/main.rs"

[dependencies]
aerospace = {path = "../aerospace"}
transforms = {path = "../transforms"}
coordinate_systems = {path = "../coordinate_systems"}
color = {path = "../color"}
differential_equations = {path = "../differential_equations"}
gadgt_3d = {path = "../gadgt_3d"}
rotations = {path = "../rotations"}
spatial_algebra = {path = "../spatial_algebra"}
mass_properties = {path = "../mass_properties"}
multibody = {path = "../multibody"}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
utilities = {path = "../utilities"}
polars = { version = "0.41.2", features = ["lazy"] }
chrono = "0.4.38"
nalgebra = "0.33.0"
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
smol_str = "0.2.2"
reedline = "0.33.0"
ratatui = "0.27.0"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
dhat = "0.3.3"
dirs-next = "2.0.0"
tokio = { version = "1.39.3", features = ["rt", "macros", "rt-multi-thread"] }
bincode = "1.3.3"

[features]
dhat-heap = []
