[package]
name = "gravity"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
approx.workspace = true
legendre.workspace = true
nalgebra.workspace = true
serde.workspace = true
spherical_harmonics.workspace = true
thiserror.workspace = true
utilities.workspace = true