[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["canvas","tokio"] }
iced_aw = { version = "0.9.3", features = ["card", "modal", "selection_list"] }
uuid = "1.9.1"
mass_properties = {path = "../mass_properties"}
multibody = {path = "../multibody"}
lyon_geom = "1.0.5"
lyon_path = "1.0.5"
transforms = {path = "../transforms"}
utilities = {path = "../utilities"}
image = "0.25.1"
winit = "0.30.3"
polars = "0.41.3"
chrono = "0.4.38"
