[package]
name = "gui"
version.workspace = true
edition.workspace = true

[dependencies]
aerospace.workspace = true
coordinate_systems.workspace = true
iced.workspace = true
iced_aw = { version = "0.9.3", features = ["card", "modal", "selection_list"] }
mass_properties.workspace = true
multibody.workspace = true
lyon_geom = "1.0.5"
lyon_path = "1.0.5"
rotations.workspace = true
transforms.workspace = true
utilities.workspace = true
image.workspace = true
chrono.workspace = true
glam.workspace = true
bytemuck.workspace = true
nalgebra.workspace = true
