[package]
name = "multibody"
version.workspace = true
edition.workspace = true

[dependencies]
aerospace.workspace = true
spice.workspace = true
transforms.workspace = true
coordinate_systems.workspace = true
nadir_3d.workspace = true
rotations.workspace = true
spatial_algebra.workspace = true
mass_properties.workspace = true
utilities.workspace = true
time.workspace = true
chrono.workspace = true
nalgebra.workspace = true
clap.workspace = true
ron.workspace = true
serde.workspace = true
rand.workspace = true
rand_distr.workspace = true
thiserror.workspace = true
typetag.workspace = true

[features]
dhat-heap = []
