[package]
name = "multibody"
version.workspace = true
edition.workspace = true

[dependencies]
aerospace.workspace = true
ambassador.workspace = true
bincode.workspace = true
bytemuck.workspace = true
celestial.workspace = true
chrono.workspace = true
clap.workspace = true
color.workspace = true
coordinate_systems.workspace = true
csv.workspace = true
gravity.workspace = true
indicatif.workspace = true
libloading.workspace = true
mass_properties.workspace = true
nadir_3d.workspace = true
nadir_result.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
ron.workspace = true
rotations.workspace = true
serde.workspace = true
spatial_algebra.workspace = true
spice.workspace = true
thiserror.workspace = true
time.workspace = true
transforms.workspace = true
typetag.workspace = true
uncertainty.workspace = true
utilities.workspace = true