[package]
name = "nadir"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ansi_term.workspace = true
bytemuck.workspace = true
celestial.workspace = true
color.workspace = true
csv.workspace = true
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
glam.workspace = true
iced.workspace = true
image.workspace = true
inquire.workspace = true
multibody.workspace = true
nadir_3d.workspace = true
nalgebra.workspace = true
pest.workspace = true
pest_derive.workspace = true
rand.workspace = true
rand_distr.workspace = true
ron.workspace = true
rotations.workspace = true
rustyline.workspace = true
rustyline-derive.workspace = true
term_size.workspace = true
thiserror.workspace = true
time.workspace = true
unicode-width.workspace = true
uuid.workspace = true

[features]
default = ["with-file-history"]

with-file-history = []