[package]
name = "nadir_diffeq"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
csv.workspace = true
rand.workspace = true
serde.workspace = true
tolerance.workspace = true
uncertainty.workspace = true

[dev-dependencies]
image.workspace = true
plotters.workspace = true
show-image.workspace = true

