[package]
name = "nadir_diffeq"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
csv.workspace = true
indicatif.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tolerance.workspace = true
uncertainty.workspace = true

[dev-dependencies]
plotting.workspace = true