[package]
name = "pest"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
colored.workspace = true
dirs.workspace = true
pest.workspace = true
pest_derive.workspace = true
rustyline.workspace = true
thiserror.workspace = true

[features]
default = ["with-file-history"]

with-file-history = []