[package]
name = "plotting"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bincode.workspace = true
csv.workspace = true
iced.workspace = true
image.workspace = true
inquire.workspace = true
multibody.workspace = true
ron.workspace = true
rand = "0.8.3"
tracing-subscriber = "0.3"