[package]
name = "spatial_algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
coordinate_systems = {path = "../coordinate_systems"}
linear_algebra = {path = "../linear_algebra"}
rotations = {path = "../rotations"}
transforms = {path = "../transforms"}
mass_properties = {path = "../mass_properties"}