[package]
name = "spatial_algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
coordinate_systems = {path = "../coordinate_systems"}
rotations = {path = "../rotations"}
transforms = {path = "../transforms"}
mass_properties = {path = "../mass_properties"}
nalgebra = "0.33.0"
serde = "1.0.204"
