[package]
name = "spice"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode.workspace = true
byteorder.workspace = true
clap.workspace = true
dirs.workspace = true
phf.workspace = true
rotations.workspace = true
reqwest.workspace = true
serde.workspace = true
time.workspace = true
httpdate.workspace = true
approx.workspace = true
nalgebra.workspace = true
