[package]
name = "spice"
version.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
byteorder.workspace = true
clap.workspace = true
dirs.workspace = true
phf.workspace = true
rotations.workspace = true
reqwest.workspace = true
serde.workspace = true
time.workspace = true
httpdate.workspace = true
approx.workspace = true
nalgebra.workspace = true
