[package]
name = "syn"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ansi_term.workspace = true
dirs.workspace = true
nalgebra.workspace = true
quote.workspace = true
rotations.workspace = true
rustyline.workspace = true
rustyline-derive.workspace = true
syn.workspace = true
thiserror.workspace = true
utilities.workspace = true

[features]
default = ["with-file-history"]

with-file-history = []