[package]
name = "transforms"
version = "0.1.0"
edition = "2021"

[dependencies]
coordinate_systems = {path = "../coordinate_systems"}
rotations = {path = "../rotations"}
sim_value = {path = "../sim_value"}
mass_properties = {path = "../mass_properties"}
approx = "0.5.1"
approx_eq = "0.1.8"
nalgebra = "0.33.0"
serde = { version = "1.0.204", features = ["derive"] }
