[package]
name = "floater"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
aerospace.workspace = true
celestial.workspace = true
color.workspace = true
mass_properties.workspace = true
multibody.workspace = true
nadir_3d.workspace = true
nadir_diffeq.workspace = true
time.workspace = true
transforms.workspace = true
