[package]
name = "multi_software"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aerospace.workspace = true
bytemuck.workspace = true
celestial.workspace = true
multibody.workspace = true
nadir_result.workspace = true
nalgebra.workspace = true
rotations.workspace = true
time.workspace = true